📝 Build documentation for beta release