@@ -2,6 +2,7 @@
 source $KIVAKIT_WORKSPACE/kivakit/tools/library/library-functions.sh
 
 export BASH_SILENCE_DEPRECATION_WARNING=1
+export MAVEN_OPTS="--add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.text=ALL-UNNAMED --add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
 
 system_variable KIVAKIT_HOME "$KIVAKIT_WORKSPACE/kivakit"
 system_variable KIVAKIT_VERSION "$(project_version $KIVAKIT_HOME)"
